// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout should reset the cart whan checkout() is called 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas",
      },
      "quantity": 3,
    },
  ],
  "total": 106164,
}
`;

exports[`Cart checkout should return an object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Adidas - woman",
      },
      "quantity": 2,
    },
  ],
  "total": 154520,
}
`;

exports[`Cart checkout should return an object with the total and the list of items when summay is called 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Adidas - woman",
      },
      "quantity": 2,
    },
  ],
  "total": 154520,
}
`;

exports[`Cart checkout should return an object with the total and the list of items when summay is called 2`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Adidas - woman",
      },
      "quantity": 2,
    },
  ],
  "total": 154520,
}
`;

exports[`Cart checkout should return an object with the total and the list of items when summay is callled 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Adidas",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Adidas - woman",
      },
      "quantity": 2,
    },
  ],
  "total": 154520,
}
`;
